Next round of refactoring. Changes in Crops