@@ -4,9 +4,12 @@ import com.thesis.agrimanager.dto.UserRegistrationDTO;
 import com.thesis.agrimanager.dto.LoginDTO;
 import com.thesis.agrimanager.model.User;
 import com.thesis.agrimanager.service.UserService;
+import java.util.Map;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-import java.util.Collections;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -32,8 +35,7 @@ public class AuthController {
     public ResponseEntity<?> login(@RequestBody LoginDTO loginDto) {
         try {
             String token = userService.login(loginDto);
-            // Επιστρέφουμε το token σε ένα απλό JSON format
-            return ResponseEntity.ok(Collections.singletonMap("token", token));
+            return ResponseEntity.ok(Map.of("token", token));
         } catch (RuntimeException e) {
             return ResponseEntity.status(401).body(e.getMessage());
         }
