@@ -10,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CropService {
@@ -30,63 +29,53 @@ public class CropService {
     }
 
     public CropDTO saveCrop(CropDTO cropDTO) {
-        validateSellingPrice(cropDTO.getSellingPricePerKg());
-        // 1. Ποιος είναι ο συνδεδεμένος χρήστης;
+        validateSellingPrice(cropDTO.sellingPricePerKg());
         String currentUsername = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication().getName();
 
-        // 2. Βρίσκουμε το χωράφι - ΠΡΕΠΕΙ να ανήκει στον χρήστη
-        Field field = fieldRepository.findByIdAndOwnerUsername(cropDTO.getFieldId(), currentUsername)
+        Field field = fieldRepository.findByIdAndOwnerUsername(cropDTO.fieldId(), currentUsername)
                 .orElseThrow(() -> new RuntimeException("Το χωράφι δεν βρέθηκε ή δεν έχετε δικαίωμα πρόσβασης."));
 
-        // 3. Γεωχωρικός Έλεγχος (Spatial Validation)
-        // Ελέγχουμε αν η περιοχή της καλλιέργειας (zone) είναι μέσα στα όρια του χωραφιού
-        if (cropDTO.getZoneBoundary() != null && field.getBoundary() != null) {
-            if (!field.getBoundary().contains(cropDTO.getZoneBoundary())) {
+        if (cropDTO.zoneBoundary() != null && field.getBoundary() != null) {
+            if (!field.getBoundary().contains(cropDTO.zoneBoundary())) {
                 throw new RuntimeException("Σφάλμα: Η ζώνη καλλιέργειας βρίσκεται εκτός των ορίων του χωραφιού!");
             }
         }
 
-        // 4. Μετατροπή DTO -> Entity και Αποθήκευση
         Crop crop = new Crop();
-        crop.setType(cropDTO.getType());
-        crop.setVariety(cropDTO.getVariety());
-        crop.setPlantingDate(cropDTO.getPlantingDate());
-        applyCropHarvestData(crop, cropDTO);
-        crop.setZoneBoundary(cropDTO.getZoneBoundary());
-        crop.setField(field); // Σύνδεση με το Field
+        crop.setType(cropDTO.type());
+        crop.setVariety(cropDTO.variety());
+        crop.setPlantingDate(cropDTO.plantingDate());
+        crop.setSellingPricePerKg(cropDTO.sellingPricePerKg());
+        crop.setZoneBoundary(cropDTO.zoneBoundary());
+        crop.setField(field);
 
         Crop savedCrop = cropRepository.save(crop);
 
-        // 5. Επιστροφή σε DTO
         return convertToDTO(savedCrop);
     }
 
     public CropDTO updateCrop(Long id, CropDTO cropDTO) {
-        validateSellingPrice(cropDTO.getSellingPricePerKg());
+        validateSellingPrice(cropDTO.sellingPricePerKg());
         String currentUsername = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication().getName();
 
-        // 1. Βρίσκουμε την υπάρχουσα καλλιέργεια
         Crop crop = cropRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Η καλλιέργεια δεν βρέθηκε."));
 
-        // 2. Έλεγχος αν το χωράφι ανήκει στον χρήστη
         if (!crop.getField().getOwner().getUsername().equals(currentUsername)) {
             throw new RuntimeException("Δεν έχετε δικαίωμα επεξεργασίας αυτής της καλλιέργειας.");
         }
 
-        // 3. Γεωχωρικός έλεγχος για τη ΝΕΑ ζώνη (αν στάλθηκε νέα ζώνη)
-        if (cropDTO.getZoneBoundary() != null) {
-            if (!crop.getField().getBoundary().contains(cropDTO.getZoneBoundary())) {
+        if (cropDTO.zoneBoundary() != null) {
+            if (!crop.getField().getBoundary().contains(cropDTO.zoneBoundary())) {
                 throw new RuntimeException("Σφάλμα: Η νέα ζώνη καλλιέργειας είναι εκτός των ορίων του χωραφιού!");
             }
-            crop.setZoneBoundary(cropDTO.getZoneBoundary());
+            crop.setZoneBoundary(cropDTO.zoneBoundary());
         }
 
-        // 4. Ενημέρωση των υπόλοιπων στοιχείων
-        crop.setType(cropDTO.getType());
-        crop.setVariety(cropDTO.getVariety());
-        crop.setPlantingDate(cropDTO.getPlantingDate());
-        applyCropHarvestData(crop, cropDTO);
+        crop.setType(cropDTO.type());
+        crop.setVariety(cropDTO.variety());
+        crop.setPlantingDate(cropDTO.plantingDate());
+        crop.setSellingPricePerKg(cropDTO.sellingPricePerKg());
 
         Crop updatedCrop = cropRepository.save(crop);
         return convertToDTO(updatedCrop);
@@ -94,7 +83,6 @@ public class CropService {
 
     @Transactional
     public void deleteCrop(Long id) {
-        // Έλεγχος αν υπάρχει και αν ανήκει στον χρήστη μέσω του Field
         Crop crop = cropRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Η καλλιέργεια δεν βρέθηκε."));
 
@@ -110,37 +98,30 @@ public class CropService {
     public List<CropDTO> getCropsByField(Long fieldId) {
         return cropRepository.findByFieldId(fieldId).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private CropDTO convertToDTO(Crop crop) {
-        CropDTO dto = new CropDTO();
-        dto.setId(crop.getId());
-        dto.setType(crop.getType());
-        dto.setVariety(crop.getVariety());
-        dto.setPlantingDate(crop.getPlantingDate());
-        dto.setHarvestYield(crop.getHarvestYield());
-        dto.setSellingPricePerKg(crop.getSellingPricePerKg());
-        dto.setZoneBoundary(crop.getZoneBoundary());
-        dto.setFieldId(crop.getField().getId());
+        Double zoneArea = null;
+        Double coveragePercentage = null;
 
-        // Υπολογισμός Έκτασης Ζώνης (JTS Area)
         if (crop.getZoneBoundary() != null) {
-            double area = crop.getZoneBoundary().getArea();
-            // Σημείωση: Η getArea() επιστρέφει τιμές σε μοίρες αν το SRID είναι 4326.
-            // Για ακρίβεια σε μέτρα χρειάζεται μετατροπή, αλλά για το % μας κάνει και έτσι:
-            dto.setZoneArea(area);
-
+            zoneArea = crop.getZoneBoundary().getArea();
             double fieldArea = crop.getField().getBoundary().getArea();
-            dto.setCoveragePercentage((area / fieldArea) * 100);
+            coveragePercentage = (zoneArea / fieldArea) * 100;
         }
 
-        return dto;
-    }
-
-    private void applyCropHarvestData(Crop crop, CropDTO cropDTO) {
-        crop.setHarvestYield(cropDTO.getHarvestYield());
-        crop.setSellingPricePerKg(cropDTO.getSellingPricePerKg());
+        return new CropDTO(
+                crop.getId(),
+                crop.getType(),
+                crop.getVariety(),
+                crop.getPlantingDate(),
+                crop.getSellingPricePerKg(),
+                crop.getZoneBoundary(),
+                crop.getField().getId(),
+                zoneArea,
+                coveragePercentage
+        );
     }
 
     private void validateSellingPrice(BigDecimal sellingPricePerKg) {
